@@ -4,12 +4,7 @@
 #ifndef QUEUE_H
 #define QUEUE_H
 
-typedef struct {
-    int x, y;
-} Point;
-
-Point* create_point(__uint8_t x, __uint8_t y);
-Point* generate_point(__uint8_t x_min, __uint8_t x_max, __uint8_t y_min, __uint8_t y_max);
+#include "data_structures/point.h"
 
 //Circular queue implementation for Point struct
 typedef struct {
