@@ -1,3 +1,6 @@
+10/15/2023 11:00p
+    Adding character movement
+
 10/3/2023 10:30a
     Refactoring for simplicity
 
